--- a/front/public/index.html
+++ b/front/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="iconsfont.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>    
-    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>КабельТорг</title>
   </head>
   <body>
