Finish generating an invoice endpoint

--- a/backend/src/invoice_generator/invoice_template.html
+++ b/backend/src/invoice_generator/invoice_template.html
@@ -57,10 +57,10 @@
         </div>
         <div class="invoice__price">
             <div class="invoice__price__item">
-                Сумма НДС: <span></span>
+                Сумма НДС: <span> {{products_tax_sum}}</span>
             </div>
             <div class="invoice__price__item"></div>
-            Всего к оплате сумма с НДС: <span></span>
+            Всего к оплате сумма с НДС: <span>{{products_price_with_tax}}</span>
         </div>
         <hr class="hr">
     </div>
@@ -72,7 +72,10 @@
                 банковских дней с даты выставления счет-фактуры.</p>
             <p>Срок поставки в течение 14 (Четырнадцать) рабочих дней с даты получения предоплаты.</p>
             <p>Условия поставки: транспортом и за счет средств Поставщика.</p>
-            <p>Данный счет является неотъемлемой частью договора Договор № <span>{{dogovor_number}}</span></p>
+            <p>
+                Данный счет является неотъемлемой частью договора Договор №
+                <span>{{invoice_number}} от {{created_at}}</span>
+            </p>
             <p>В соответствии с требований постановления Министерства архитектуры и строительства Республики Беларусь от
                 30.07.2021 № 73 «О порядке регулирования цен на
                 строительные материалы, изделия, конструкции» стороны пришли к соглашению, что поставляемый товар не
@@ -140,18 +143,20 @@
                         <td>Объем партии</td>
                         <td>Отпускная цена и (или) тариф по прейскуранту</td>
                         <td>Размер предоставленной скидки</td>
-                        <td>СОтпускная цена и (или) тариф, применяемые в расчетах</td>
+                        <td>Отпускная цена и (или) тариф, применяемые в расчетах</td>
                         <td>Вес</td>
                     </tr>
+                    {% for product in products %}
                     <tr>
-                        <td>1</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>{{loop.index}}</td>
+                        <td>{{product.name}}</td>
+                        <td>{{product.amount}}</td>
+                        <td>{{product.price_with_tax}}</td>
+                        <td>{{product.discount}}</td>
+                        <td>{{product.price_with_tax_and_ordr_discount}}</td>
                         <td></td>
                     </tr>
+                    {% endfor %}
                 </table>
             </div>
         </div>
