Add weight for products

--- a/backend/src/invoice_generator/invoice_template.html
+++ b/backend/src/invoice_generator/invoice_template.html
@@ -50,7 +50,7 @@
                         <td>{{product.tax}}</td>
                         <td>{{product.tax_sum}}</td>
                         <td>{{product.price_with_tax}}</td>
-                        <td></td>
+                        <td>{{product.weight}}</td>
                     </tr>
                 {% endfor %}
             </table>
@@ -154,7 +154,7 @@
                         <td>{{product.price_with_tax}}</td>
                         <td>{{product.discount}}</td>
                         <td>{{product.price_with_tax_and_ordr_discount}}</td>
-                        <td></td>
+                        <td>{{product.weight}}</td>
                     </tr>
                     {% endfor %}
                 </table>
