Change one news style

--- a/backend/src/invoice_generator/invoice_template.html
+++ b/backend/src/invoice_generator/invoice_template.html
@@ -73,26 +73,13 @@
             <p>Срок поставки в течение 14 (Четырнадцать) рабочих дней с даты получения предоплаты.</p>
             <p>Условия поставки: транспортом и за счет средств Поставщика.</p>
             <p>
-                Данный счет является неотъемлемой частью договора Договор №
+                Данный счет является неотъемлемой частью договора поставки №
                 <span>{{invoice_number}} от {{created_at}}</span>
             </p>
-            <p>В соответствии с требований постановления Министерства архитектуры и строительства Республики Беларусь от
-                30.07.2021 № 73 «О порядке регулирования цен на
-                строительные материалы, изделия, конструкции» стороны пришли к соглашению, что поставляемый товар не
-                должен использоваться при строительстве объектов (за
-                исключением строительства автомобильных дорог, мостов и тоннелей), финансируемых полностью или частично
-                за счет средств республиканского и (или) местных
-                бюджетов, в том числе государственных целевых бюджетных фондов, а также государственных внебюджетных
-                фондов, внешних государственных займов и внешних
-                займов, привлеченных под гарантии Правительства Республики Беларусь, кредитов банков Республики Беларусь
-                под гарантии Правительства Республики Беларусь и
-                областных, Минского городского исполнительных комитетов, а также при строительстве жилых домов (за
-                исключением финансируемых с использованием средств
-                иностранных инвесторов). Покупатель в случае реализации поставляемого товара обязан совершить
-                аналогичную оговорку. Поставщик не несет ответственность за
-                нарушение Покупателем или иным третьим лицом условий использования товара. Причиненные Поставщику убытки
-                вследствие нарушения условий использования
-                товара подлежат возмещению Покупателем в полном объеме.</p>
+            <p>Покупатель гарантирует, что приобретаемый по данному счет-протоколу товар не будет использоваться в целях, указанных в постановлении Министерства архитектуры
+                и строительства Республики Беларусь от 30.12.2022г. № 116 «О порядке регулирования цен». Покупатель в случае реализации поставляемого товара обязан совершить
+                аналогичную оговорку. Поставщик не несет ответственность за нарушение Покупателем или иным третьем лицом условий использования товара. Причиненные
+                Поставщику убытки вследствие нарушения условий использования товара подлежат возмещению Покупателем в полном объеме.</p>
         </div>
         <hr class="hr">
         <div class="footer__sign">
