add create_order template

--- a/front/src/mail/regitration/template.htm
+++ b/front/src/mail/regitration/template.htm
@@ -12,7 +12,7 @@
 <div style="position: relative; background-color:  #F4F5F6;">
 	<div style="max-width: 560px; min-width: 520px; margin: 0 auto; position: relative; width: 100%; background-color: #fff">
 	
-            <img src="header_image_2.png" alt="" style="display: block; width: 100%;">
+            <img src="../header_image_2.png" alt="" style="display: block; width: 100%;">
 			
 			
         <div style="padding: 15px 0; position: relative;">
@@ -41,23 +41,23 @@
                 <div style="display: table; width: 100%;">
                     <div style="display: table-cell; text-align: left; ">
                         <a href="" target="_blank">
-                            <img src="logo.png" alt="" style="vertical-align: middle;"></a>
+                            <img src="../logo.png" alt="" style="vertical-align: middle;"></a>
                     </div>
                     <div style="display: table-cell; text-align: center;">
                         <a href="tel:375296889454" target="_blank">
-                            <img src="phone.png" alt="" style="vertical-align: middle;"></a>
+                            <img src="../phone.png" alt="" style="vertical-align: middle;"></a>
                     </div>
                     <div style="display: table-cell; text-align: center; width: 50px;">
                         <a href="https://www.linkedin.com/company/10900633/admin/" target="_blank">
-                            <img src="insta.png" alt="" style="height: 25px; vertical-align: middle; width: 25px;"></a>
+                            <img src="../insta.png" alt="" style="height: 25px; vertical-align: middle; width: 25px;"></a>
                     </div>
                     <div style="display: table-cell; text-align: center; width: 50px;">
                         <a href="https://www.youtube.com/channel/UCF3YMJlN1cLl_fzjoSyn7_Q" target="_blank">
-                            <img src="vk.png" alt="" style="height: 25px; vertical-align: middle; width: 25px;"></a>
+                            <img src="../vk.png" alt="" style="height: 25px; vertical-align: middle; width: 25px;"></a>
                     </div>
                     <div style="display: table-cell; text-align: center; width: 50px;">
                         <a href="https://www.youtube.com/channel/UCF3YMJlN1cLl_fzjoSyn7_Q" target="_blank">
-                            <img src="facebook.png" alt="" style="height: 25px; vertical-align: middle; width: 25px;"></a>
+                            <img src="../facebook.png" alt="" style="height: 25px; vertical-align: middle; width: 25px;"></a>
                     </div>
                 </div>
             </div>
