--- a/front/src/mail/change_order_status/template.htm
+++ b/front/src/mail/change_order_status/template.htm
@@ -9,42 +9,32 @@
 </head>
 
 <body style="padding: 0px; box-sizing: border-box; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 1.4285714285714286; font-size: 15px; margin: 0px; position: relative; background-color:  #F4F5F6;">
-    <div style="position: relative; background-color: #F4F5F6;">
-        <div style="max-width: 560px; min-width: 520px; margin: 0 auto; position: relative; width: 100%; background-color: #fff">
-
-            <img src="../header_image_1.png" alt="" style="display: block; width: 100%;">
-
-
-        <!-- BODY   -->
+<div style="position: relative; background-color:  #F4F5F6;">
+	<div style="max-width: 560px; min-width: 520px; margin: 0 auto; position: relative; width: 100%; background-color: #fff">
+	
+            <img src="../header_image_3.png" alt="" style="display: block; width: 100%;">
+			
+			
         <div style="padding: 15px 0; position: relative;">
 
             <p style="font-size:30px; text-align: left; font-weight:bold;padding: 0  20px;">
-                Заказ принят!</p>
+                Добрый день, Пользователь!</p>
 			
-			<p style="font-size:18px; text-align: left;padding: 0  20px ">
-                Добрый день, <b>Ирина</b>!</p>
             <p style="font-size:18px; text-align: left;padding: 0  20px ">
-                Заказанные товары уже готовятся к отправке, с вами свяжется специалист для уточнения. </p>
-            <p style="font-size:18px; text-align: left;padding: 0  20px ">
-                Отслеживать статус заказа в реальном времени можно в Личном кабинете. </p>
+                Уведомляем Вас, что статус вашего заказа изменен! </p>
+					
 
-            <p style="font-size:18px; text-align: left;padding: 0  20px ">
-                Команда <span style="color:#4275D8; font-weight: bold" >CabelTorg</span>
-            </p>
+			
 
-
-            <div style="background-color: #fff; position: relative; padding: 10px 0 40px 20px">
+       <div style="background-color: #fff; position: relative; padding: 10px 0 40px 20px">
             <div style="border-radius: 6px; width: 220px; padding-top: 15px; height: 37px; background: #4275D8; border: 1px solid #F4F5F6; opacity: 1; text-align: center;margin:0 auto">
-                <a href="cabeltorg.by" style="color: #fff; font-size: 18px; text-decoration: none; vertical-align: top;">Подробнее о заказе</a>
+                <a href="cabeltorg.by" style="color: #fff; font-size: 18px; text-decoration: none; vertical-align: top;">Перейти на сайт</a>
             </div>
 
         </div>
 
-
-
-        </div>
-        <!-- ORDER DETAILS   -->
-        <div style="padding: 15px 20px 40px 20px; position: relative;">
+       <!-- ORDER DETAILS   -->
+       <div style="padding: 15px 20px 40px 20px; position: relative;">
             <div style="padding: 0 25px ; width: auto; font-size: 18px; line-height: 24px; color: #000000; text-align: left; background: #F8FAFF;">
                 <div style="padding:15px 25px 0 40px; margin-bottom: 10px;">
                     <div style="background: url('../order_number.svg') no-repeat left top; height: 50px; padding-left: 45px; margin-bottom: 20px;">
@@ -56,31 +46,15 @@
                 </div>
                 <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
                     <div style="background: url('../time.svg') no-repeat left top; height: 50px; padding-left: 45px;margin-bottom: 20px;">
-                        <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Дата доставки</span>
+                        <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Статус заказа</span>
                         <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">23 ноября 2023</span>
+                        <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">В пути</span>
                     </div>
                 </div>
-                <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../store.svg') no-repeat left top; height: 50px; padding-left: 45px;margin-bottom: 20px;">
-                        <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Адрес пункта выдачи</span>
-                        <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">Брест, ул. Веры Хоружей 3</span>
-                    </div>
-                </div>
-                <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../client.svg') no-repeat left top;height: 50px; padding-left: 45px;padding-bottom: 30px;">
-                        <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Получатель</span>
-                        <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">Гринчук Ирина</span>
-                        <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">+384 22 434-43-43</span>
-                    </div>
-                </div>
-
             </div>
         </div>
-        <!-- FOOTER   -->
+
+
         <div style="color: #fff; position: relative; background: #423E48">
             <div style="padding: 30px 20px 30px 20px;">
                 <div style="display: table; width: 100%;">
@@ -113,9 +87,7 @@
             </div>
         </div>
 
-
-
-
     </div>
+</div>
 </body>
 </html>
