--- a/front/src/mail/send_password/template.htm
+++ b/front/src/mail/send_password/template.htm
@@ -23,7 +23,24 @@
 			<p style="font-size:18px; text-align: left;padding: 0  20px ">
                 Добрый день, <b>Ирина</b>!</p>
             <p style="font-size:18px; text-align: left;padding: 0  20px ">
-                Регистрация прошла успешно. Желаем Вам приятных покупок. </p>
+                Регистрация прошла успешно. Желаем Вам приятных покупок.</p>
+
+            <div style="font-size:18px; margin: 40px 0">
+                <div>
+                    <span style="font-size:18px; text-align: left;padding: 0  20px; font-weight: bold">
+                        Логин:</span>
+                    <span>alekd123@tut.by</span>
+                </div>
+                <div>
+                    <span style="font-size:18px; text-align: left;padding: 0  20px; font-weight: bold">
+                        Пароль:</span>
+                    <span>fhrGD4EdgW</span>
+                </div>
+
+
+            </div>
+            <p style="font-size:12px; text-align: left;padding: 0  20px;opacity: 0.5 ">
+                Обращаем ваше внимание, во избежание несанкционированного доступа к вашему аккаунту, настоятельно рекомендуем изменить пароль</p>
 					
 
 			
