Update mail without bg-image

--- a/front/src/mail/create_order/template.htm
+++ b/front/src/mail/create_order/template.htm
@@ -47,34 +47,61 @@
         <div style="padding: 15px 20px 40px 20px; position: relative;">
             <div style="padding: 0 25px ; width: auto; font-size: 18px; line-height: 24px; color: #000000; text-align: left; background: #F8FAFF;">
                 <div style="padding:15px 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../order_number.svg') no-repeat left top; height: 50px; padding-left: 45px; margin-bottom: 20px;">
-                        <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Номер заказа</span>
-                        <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">03-04-2023</span>
+
+                    <div style="height: 50px; padding-left: 0;margin-bottom: 20px; display: table; width: 100%;">
+                        <div style="display: table-cell; text-align: left; width: 45px">
+                            <img src="../order_number.svg" alt="" style="vertical-align: middle; padding-top: 5px">
+                        </div>
+                        <div style="display: table-cell; text-align: left; ">
+                            <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Номер заказа</span>
+                            <br>
+                            <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">03-04-2023</span>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
+                    <div style="height: 50px; padding-left: 0;margin-bottom: 20px; display: table; width: 100%;">
+                        <div style="display: table-cell; text-align: left; width: 45px">
+                            <img src="../delivery_time.svg" alt="" style="vertical-align: middle; padding-top: 5px">
+                        </div>
+                        <div style="display: table-cell; text-align: left; ">
+                            <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Дата доставки</span>
+                            <br>
+                            <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">23 ноября 2023</span>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
+                    <div style="height: 50px; padding-left: 0;margin-bottom: 20px; display: table; width: 100%;">
+                        <div style="display: table-cell; text-align: left; width: 45px">
+                            <img src="../warehouse.svg" alt="" style="vertical-align: middle; padding-top: 5px">
+                        </div>
+                        <div style="display: table-cell; text-align: left; ">
+                            <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Адрес пункта выдачи</span>
+                            <br>
+                            <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">Брест, ул. Веры Хоружей 3</span>
+                        </div>
 
                     </div>
                 </div>
                 <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../time.svg') no-repeat left top; height: 50px; padding-left: 45px;margin-bottom: 20px;">
-                        <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Дата доставки</span>
-                        <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">23 ноября 2023</span>
-                    </div>
-                </div>
-                <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../store.svg') no-repeat left top; height: 50px; padding-left: 45px;margin-bottom: 20px;">
-                        <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Адрес пункта выдачи</span>
-                        <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">Брест, ул. Веры Хоружей 3</span>
-                    </div>
-                </div>
-                <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../client.svg') no-repeat left top;height: 50px; padding-left: 45px;padding-bottom: 30px;">
-                        <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Получатель</span>
-                        <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">Гринчук Ирина</span>
-                        <br>
-                        <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">+384 22 434-43-43</span>
+                    <div style="height: 50px; padding-left: 0;margin-bottom: 20px; display: table; width: 100%;">
+                        <div style="display: table-cell; text-align: left; width: 45px">
+                            <img src="../client.svg" alt="" style="vertical-align: middle; padding-top: 5px">
+                        </div>
+                        <div style="display: table-cell; text-align: left; ">
+                            <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Получатель</span>
+                            <br>
+                            <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">Гринчук Ирина</span>
+                            <br>
+                            <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">+384 22 434-43-43</span>
+                        </div>
+
                     </div>
                 </div>
 
