Rename cabeltorg on cabel-torg

--- a/front/src/mail/create_order/template.htm
+++ b/front/src/mail/create_order/template.htm
@@ -35,7 +35,7 @@
 
             <div style="background-color: #fff; position: relative; padding: 10px 0 40px 20px">
             <div style="border-radius: 6px; width: 220px; padding-top: 15px; height: 37px; background: #4275D8; border: 1px solid #F4F5F6; opacity: 1; text-align: center;margin:0 auto">
-                <a href="cabeltorg.by" style="color: #fff; font-size: 18px; text-decoration: none; vertical-align: top;">Подробнее о заказе</a>
+                <a href="cabel-torg.by" style="color: #fff; font-size: 18px; text-decoration: none; vertical-align: top;">Подробнее о заказе</a>
             </div>
 
         </div>
@@ -135,7 +135,7 @@
             </div>
             <div style="padding: 0 20px 20px 20px;">
                 <p style="font-size: 12px; margin: 0; text-align: left; width:70%; opacity: 0.6;">
-                    © cabeltorg.by - кабельная продукция. Все права защищены. Копирование информации с сайта запрещено.
+                    © cabel-torg.by - кабельная продукция. Все права защищены. Копирование информации с сайта запрещено.
                 </p>
             </div>
         </div>
